WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202395
RTCDataChannel should not prevent entering page cache except if in open state
https://bugs.webkit.org/show_bug.cgi?id=202395
Summary
RTCDataChannel should not prevent entering page cache except if in open state
youenn fablet
Reported
2019-10-01 02:32:08 PDT
RTCDataChannel should not prevent entering page cache except if in open state
Attachments
Patch
(5.49 KB, patch)
2019-10-01 02:38 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.49 KB, patch)
2019-10-01 06:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-10-01 02:38:19 PDT
Created
attachment 379884
[details]
Patch
youenn fablet
Comment 2
2019-10-01 06:53:28 PDT
Created
attachment 379900
[details]
Patch
WebKit Commit Bot
Comment 3
2019-10-01 12:21:14 PDT
Comment on
attachment 379900
[details]
Patch Clearing flags on attachment: 379900 Committed
r250573
: <
https://trac.webkit.org/changeset/250573
>
WebKit Commit Bot
Comment 4
2019-10-01 12:21:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-10-01 12:22:22 PDT
<
rdar://problem/55885556
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug